--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       <header class="header_section">
         <div class="container">
           <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
-            <a class="navbar-brand" href="index.html">
-              <img src="images/logo.png" alt="" /><span>
+            <a class="navbar-brand" href="#">
+              <img src="images/logo.jpeg" alt="" /><span>
                 Ghanshyala Enterprises
               </span>
             </a>
@@ -71,29 +71,29 @@
                     >
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="fruit.html"> Fruits</a>
+                    <a class="nav-link" href="#menu"> Fruits</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="service.html"> Services </a>
+                    <a class="nav-link" href="#service"> Services </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact us</a>
+                    <a class="nav-link" href="#contact">Contact us</a>
                   </li>
                 </ul>
-                <form
+                <!-- <form
                   class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0"
                 >
                   <button
                     class="btn my-2 my-sm-0 nav_search-btn"
                     type="submit"
                   ></button>
-                </form>
+                </form> -->
               </div>
-              <div
+              <!-- <div
                 class="quote_btn-container ml-0 ml-lg-4 d-flex justify-content-center"
               >
                 <a href=""> Get A quote </a>
-              </div>
+              </div> -->
             </div>
           </nav>
         </div>
@@ -117,14 +117,14 @@
                           <div>
                             <h1>
                               Welcome to <br />
-                              Our Fruits Shop
+                              Ghanshyala Enterprises
                             </h1>
                             <p>
-                              There are many variations of passages of Lorem
-                              Ipsum available, but the majority have suffered
-                              alteration in some form, by injected humour, or
-                              randomised words which don't look even slightly
-                              believable.
+                              Experience the irresistible taste of our premium
+                              Soya Chaap, where every bite is a perfect blend of
+                              rich flavors and wholesome goodness! There are
+                              many variations of soya chaap we sell try our
+                              handmade chap now!!
                             </p>
                             <div class="d-flex">
                               <a
@@ -143,7 +143,7 @@
                       <div class="col-md-6">
                         <div class="slider_img-box">
                           <div>
-                            <img src="images/slide-img.png" alt="" class="" />
+                            <img src="images/photo4.png" alt="" class="" />
                           </div>
                         </div>
                       </div>
@@ -160,16 +160,13 @@
                       <div class="col-md-6">
                         <div class="slider_item-detail">
                           <div>
-                            <h1>
-                              Welcome to <br />
-                              Our Fruits Shop
-                            </h1>
+                            <h1>Healthy and flavorful indulgence</h1>
                             <p>
-                              There are many variations of passages of Lorem
-                              Ipsum available, but the majority have suffered
-                              alteration in some form, by injected humour, or
-                              randomised words which don't look even slightly
-                              believable.
+                              Experience the perfect fusion of taste and
+                              nutrition with our premium Soya Chaap,
+                              meticulously crafted to bring you a deliciously
+                              rich and satisfying vegetarian alternative that's
+                              bound to elevate your culinary journey.
                             </p>
                             <div class="d-flex">
                               <a
@@ -188,7 +185,7 @@
                       <div class="col-md-6">
                         <div class="slider_img-box">
                           <div>
-                            <img src="images/slide-img.png" alt="" class="" />
+                            <img src="images/photo1.jpg" alt="" class="" />
                           </div>
                         </div>
                       </div>
@@ -205,16 +202,13 @@
                       <div class="col-md-6">
                         <div class="slider_item-detail">
                           <div>
-                            <h1>
-                              Welcome to <br />
-                              Our Fruits Shop
-                            </h1>
+                            <h1>Gourmet vegetarian protein delight</h1>
                             <p>
-                              There are many variations of passages of Lorem
-                              Ipsum available, but the majority have suffered
-                              alteration in some form, by injected humour, or
-                              randomised words which don't look even slightly
-                              believable.
+                              Transform your dining experience with our
+                              deliciously succulent Soya Chaap, a perfect
+                              vegetarian delicacy that combines robust flavors
+                              with high nutritional value, making every bite a
+                              celebration of taste and wellness
                             </p>
                             <div class="d-flex">
                               <a
@@ -233,7 +227,7 @@
                       <div class="col-md-6">
                         <div class="slider_img-box">
                           <div>
-                            <img src="images/slide-img.png" alt="" class="" />
+                            <img src="images/photo2.jpg" alt="" class="" />
                           </div>
                         </div>
                       </div>
@@ -269,67 +263,74 @@
 
     <!-- service section -->
 
-    <section class="service_section layout_padding">
+    <section class="service_section layout_padding" id="menu">
       <div class="container">
-        <h2 class="custom_heading">Our Services</h2>
+        <h2 class="custom_heading">Our Products</h2>
         <p class="custom_heading-text">
-          There are many variations of passages of Lorem Ipsum available, but
-          the majority have
+          There are many variations of Soya Chaap available, but the majority
+          have been crafted to perfection, offering a unique blend of flavors
+          and nutrition that cater to diverse tastes and preferences.
         </p>
         <div class="layout_padding2">
           <div class="card-deck">
             <div class="card">
               <img
                 class="card-img-top"
-                src="images/card-item-1.png"
+                src="images/photo4.png"
                 alt="Card image cap"
               />
               <div class="card-body">
-                <h5 class="card-title">Orange</h5>
+                <h5 class="card-title">Malai Chaap</h5>
                 <p class="card-text">
-                  There are many variations of passages of Lorem Ipsum
-                  available, but the majority have suffered alteration in some
-                  form, by injected humour, or randomised words which don't look
-                  even slightly believable.
+                  Discover the exquisite taste of our Malai Chaap, crafted from
+                  premium soya and marinated in a rich blend of fresh cream and
+                  spices. Grilled to perfection, each bite offers a creamy,
+                  succulent experience that combines tradition and innovation
+                  for an unforgettable vegetarian delight. Savor the difference
+                  today!
                 </p>
               </div>
             </div>
             <div class="card">
               <img
                 class="card-img-top"
-                src="images/card-item-2.png"
+                src="images/photo5.jpeg"
                 alt="Card image cap"
               />
               <div class="card-body">
-                <h5 class="card-title">Grapes</h5>
+                <h5 class="card-title">Punjabi Chaap</h5>
                 <p class="card-text">
-                  There are many variations of passages of Lorem Ipsum
-                  available, but the majority have suffered alteration in some
-                  form, by injected humour, or randomised words which don't look
-                  even slightly believable.
+                  Experience the authentic flavors of our Punjabi Chaap, made
+                  from high-quality soya and marinated in a robust blend of
+                  traditional Punjabi spices. Grilled to perfection, each piece
+                  delivers a rich, spicy, and satisfying taste that captures the
+                  essence of Punjab. Perfect for any occasion, indulge in true
+                  Punjabi delight today!
                 </p>
               </div>
             </div>
             <div class="card">
               <img
                 class="card-img-top"
-                src="images/card-item-3.png"
+                src="images/photo3.jpg"
                 alt="Card image cap"
               />
               <div class="card-body">
-                <h5 class="card-title">Gauva</h5>
+                <h5 class="card-title">Masala Chaap</h5>
                 <p class="card-text">
-                  There are many variations of passages of Lorem Ipsum
-                  available, but the majority have suffered alteration in some
-                  form, by injected humour, or randomised words which don't look
-                  even slightly believable.
+                  Savor the bold and vibrant flavors of our Masala Chaap,
+                  crafted from premium soya and marinated in a rich mix of
+                  aromatic spices. Grilled to perfection, each bite is a
+                  delicious explosion of spicy, tangy goodness. Perfect for
+                  spice lovers, enjoy the irresistible taste of Masala Chaap
+                  today!
                 </p>
               </div>
             </div>
           </div>
         </div>
         <div class="d-flex justify-content-center">
-          <a href="" class="custom_dark-btn"> Read More </a>
+          <!-- <a href="" class="custom_dark-btn"> Read More </a> -->
         </div>
       </div>
     </section>
@@ -338,25 +339,29 @@
 
     <!-- fruits section -->
 
-    <section class="fruit_section">
+    <section class="fruit_section" id="service">
       <div class="container">
-        <h2 class="custom_heading">Fresh Fruits</h2>
+        <h2 class="custom_heading">Fresh Chaap</h2>
         <p class="custom_heading-text">
-          There are many variations of passages of Lorem Ipsum available, but
-          the majority have
+          Explore our Chaap menu, featuring a tantalizing selection of flavors
+          from creamy Malai to spicy Masala and authentic Punjabi. Each dish is
+          crafted with premium soya and rich spices for an unforgettable taste
+          experience.
         </p>
         <div class="row layout_padding2">
           <div class="col-md-8">
             <div class="fruit_detail-box">
-              <h3>Best Fresh Orange</h3>
+              <h3>Best Afghani Chaap</h3>
               <p class="mt-4 mb-5">
-                but the majority have suffered alteration in some form, by
-                injected humour, or randomised words which don't look even
-                slightly believable. If you are going to use a passage of Lorem
-                Ipsum, you need to be
+                Discover the exotic flavors of our Afghani Chaap, where tender
+                soya pieces are marinated in a blend of traditional Afghan
+                spices and grilled to perfection. Each bite offers a unique
+                combination of savory, smoky, and aromatic notes that transport
+                you to the heart of Afghan cuisine. Experience this culinary
+                journey today!
               </p>
               <div>
-                <a href="" class="custom_dark-btn"> Buy Now </a>
+                <a href="" class="custom_dark-btn"> &#x20B9; 149</a>
               </div>
             </div>
           </div>
@@ -366,22 +371,23 @@
             <div
               class="fruit_img-box d-flex justify-content-center align-items-center"
             >
-              <img src="images/orange.png" alt="" class="" width="250px" />
+              <img src="images/photo5.jpeg" alt="" class="" width="250px" />
             </div>
           </div>
         </div>
         <div class="row layout_padding2">
           <div class="col-md-8">
             <div class="fruit_detail-box">
-              <h3>Best Fresh Grapes</h3>
+              <h3>Tasty Mint Masala Chaap</h3>
               <p class="mt-4 mb-5">
-                but the majority have suffered alteration in some form, by
-                injected humour, or randomised words which don't look even
-                slightly believable. If you are going to use a passage of Lorem
-                Ipsum, you need to be
+                Experience the refreshing taste of our Mint Chaap, where tender
+                soya pieces are marinated in a vibrant blend of fresh mint and
+                aromatic spices. Grilled to perfection, this dish offers a
+                unique and invigorating flavor that’s both cool and satisfying.
+                Delight in the freshness with every bite!
               </p>
               <div>
-                <a href="" class="custom_dark-btn"> Buy Now </a>
+                <a href="" class="custom_dark-btn"> &#x20B9; 99 </a>
               </div>
             </div>
           </div>
@@ -389,22 +395,23 @@
             class="col-md-4 d-flex justify-content-center align-items-center"
           >
             <div class="fruit_img-box d-flex justify-content-center">
-              <img src="images/grapes.png" alt="" class="" width="100px" />
+              <img src="images/photo6.webp" alt="" class="" width="250px" />
             </div>
           </div>
         </div>
         <div class="row layout_padding2-top layout_padding-bottom">
           <div class="col-md-8">
             <div class="fruit_detail-box">
-              <h3>Best Fresh Gauva</h3>
+              <h3>Best Coriander Chaap</h3>
               <p class="mt-4 mb-5">
-                but the majority have suffered alteration in some form, by
-                injected humour, or randomised words which don't look even
-                slightly believable. If you are going to use a passage of Lorem
-                Ipsum, you need to be
+                Savor the vibrant flavors of our Coriander Chaap, featuring
+                tender soya pieces marinated in a zesty mix of fresh coriander
+                and spices. Grilled to perfection, each bite delivers a
+                refreshing and herbaceous taste that adds a delightful twist to
+                your dining experience. Enjoy the aromatic freshness today!
               </p>
               <div>
-                <a href="" class="custom_dark-btn"> Buy Now </a>
+                <a href="" class="custom_dark-btn"> &#x20B9; 169 </a>
               </div>
             </div>
           </div>
@@ -414,7 +421,7 @@
             <div
               class="fruit_img-box d-flex justify-content-center align-items-center"
             >
-              <img src="images/gauva.png" alt="" class="" width="250px" />
+              <img src="images/photo7.jpeg" alt="" class="" width="250px" />
             </div>
           </div>
         </div>
@@ -426,7 +433,7 @@
     <!-- tasty section -->
     <section class="tasty_section">
       <div class="container_fluid">
-        <h2>Very tasty fruits</h2>
+        <h2>Spicy, Tangy, Irresistible Flavor</h2>
       </div>
     </section>
 
@@ -434,7 +441,7 @@
 
     <!-- client section -->
 
-    <section class="client_section layout_padding">
+    <!-- <section class="client_section layout_padding">
       <div class="container">
         <h2 class="custom_heading">Testimonial</h2>
         <p class="custom_heading-text">
@@ -523,12 +530,12 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- end client section -->
 
     <!-- contact section -->
-    <section class="contact_section layout_padding">
+    <!-- <section class="contact_section layout_padding" id="contact">
       <div class="container">
         <h2 class="font-weight-bold">Contact Us</h2>
         <div class="row">
@@ -558,13 +565,13 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- end contact section -->
 
     <!-- map section -->
-    <section class="map_section">
+    <!-- <section class="map_section">
       <div id="map" class="h-100 w-100"></div>
-    </section>
+    </section> -->
 
     <!-- end map section -->
 
@@ -629,7 +636,7 @@
                 </a>
               </div>
             </div>
-            <div class="subscribe_container">
+            <!-- <div class="subscribe_container">
               <h5>Subscribe Now</h5>
               <div class="form_container">
                 <form action="">
@@ -637,7 +644,7 @@
                   <button type="submit">Subscribe</button>
                 </form>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -645,17 +652,14 @@
 
     <!-- footer section -->
     <section class="container-fluid footer_section">
-      <p>
-        Copyright &copy; 2019 All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
-      </p>
+      <p>Copyright &copy; 2024 All Rights Reserved By Ghanshyala Enterprises</p>
     </section>
     <!-- footer section -->
 
     <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
 
-    <script>
+    <!-- <script>
       // This example adds a marker to indicate the position of Bondi Beach in Sydney,
       // Australia.
       function initMap() {
@@ -678,8 +682,8 @@
         });
       }
     </script>
-    <!-- google map js -->
+
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8eaHt9Dh5H57Zh0xVTqxVdBFCvFMqFjQ&callback=initMap"></script>
-    <!-- end google map js -->
+    end google map js -->
   </body>
 </html>
