--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
         <div class="container">
           <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
             <a class="navbar-brand" href="#">
-              <img src="images/logo.jpeg" alt="" /><span>
-                Ghanshyala Enterprises
-              </span>
+              <img src="images/logo.jpeg" alt="" /><span> Ghanshyala </span>
             </a>
             <button
               class="navbar-toggler"
@@ -433,7 +431,7 @@
     <!-- tasty section -->
     <section class="tasty_section">
       <div class="container_fluid">
-        <h2>Spicy, Tangy, Irresistible Flavor</h2>
+        <h2>Spicy, Tangy, Flavor</h2>
       </div>
     </section>
 
